# Impedance_Matching_RF

./: CMakeLists.txt  IMRF.qmlproject  IMRF.qmlproject.qtds  README.md  qmlmodules
IMRF/: CMakeLists.txt  CMakeLists.txt.user.f4ef5b7
IMRF/content/: App.qml  Screen01.ui.qml
IMRF/imports/IMRF/: qmldir
content/: Aboutme.qml  App.qml  CMakeLists.txt  Header.qml  MainContent.qml  Screen01.ui.qml  Sidebar.qml
imports/: CMakeLists.txt
imports/IMRF/: CMakeLists.txt
imports/IMRF/designer/: plugin.metainfo
src/: import_qml_plugins.h  l_type.cpp  l_type.h  main.cpp  pi_type.cpp  pi_type.h  settinghandle.cpp  settinghandle.h  t_type.cpp  t_type.h
